fixed overflow in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,9 @@ code {
     transform: translate(24px, 0);
   }
 }
+
+@media only screen and (max-width: 768px) {
+  body {
+    overflow: auto;
+  }
+}
